== Change Log

=== SVN
* Fixed incompatibility with RubyGems >= 0.9.5 that broke radiant:freeze:gems
rake task. [Michael Klett]
* Fixed problem with the list of templates containing duplicates in the
db:bootstrap rake task when not running in instance mode. [John Long]
* Update Subversion URL so rake radiant:freeze:edge works. [John Long]
* Add AVLUX to list of links in Styled Blog template. [John Long]
* Fix Ruby 1.8.5 compatibility issue with Dir[]. [Sean Cribbs]
* Backup old environment.rb when copying new version. [Sean Cribbs]
* Fill out more controller specs. [Sean Cribbs]
* Fix Admin::PageController specs. [Sean Cribbs]
* Make autotest work. [Matthew Elder]
* Clean up cache files before running site_controller spec. [Matthew Elder]
* Add r:status tag. [Andrew O'Brien]
* Add ability to set publication date manually. [Nick Plante, Sean Cribbs]
* Remove blank nodes in r:navigation tag. [ben]
* Bubble up parsing exceptions in development mode. [jonleighton]
* Fix authorization system for controller inheritance [Josh French]
* Add 'nolinks' attribute to breadcrumbs tag. [abstractioneer]
* Fix fixtures for RSpec enabled extensions. [andreas]
* Generate extensions with RSpec support by default, fix rake and script/spec
in instance mode. [Andrew O'Brien]
* Support database templates in a Radiant instance. [Benny Degezelle]
* Make rake test:extensions work in instance mode. [Daniel Sheppard]
* Fix tests failing in instance mode with config.extensions set.
[Daniel Sheppard]
* Finished converting page_controller_test.rb to page_controller_spec.rb
[John Long]
* Completed converting user_controller_test.rb to user_controller_spec.rb
[John Long]
* Fix failing extension loading tests, remove irrelevant ones. [Sean Cribbs]
* Fix test:extensions Rake task. [Sean Cribbs]
* Prevent following the link that toggles visibility of meta items on page
edit. [Mislav Marohnić]
* Fix extension loader and previously failing unit tests; update specs.
[Mislav Marohnić]